--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.2.0",
-    "style-loader": "^3.2.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   }
